# Copyright 2024 Guowei Ling.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_binary")

package(default_visibility = ["//visibility:public"])

spu_cc_binary(
    name = "mpsu",
    srcs = [
        "main.cc",
        "opprf.h",
        "opprf.cc",
        "cuckoohash.h",
        "ssrpmt.h",
        "peqt.h",
        "ote.h",
        "shffuledec.h",
        "mot.h",
        "mpsu.h"
    ],
    deps = [
        "//examples/mpsu/okvs:galois128",
        "//examples/mpsu/okvs:baxos",
        "@yacl//yacl/kernel/algorithms:silent_vole",
        "@yacl//yacl/link:test_util",
        "//libspu/device:io",
        "//libspu/kernel/hal:public_helper",
        "//libspu/kernel/hlo:basic_binary",
        "//libspu/kernel/hlo:basic_unary",
        "//libspu/kernel/hlo:casting",
        "//libspu/kernel/hlo:const",
        "//libspu/kernel/hlo:geometrical",
        "//examples/mpsu/hesm2:homosm2",
        "@com_google_absl//absl/strings",
    ],
    copts = ["-maes", "-mpclmul","-O3"],
)